# growterm

./: .gitignore  Cargo.toml  PLAN.md  PROGRESS.md  README.ko.md  README.md  VISUAL_TESTING.md  i.sh  install.sh  nextstep.md
assets/: icon.icns
crates/juniqterm-app/: Cargo.toml
crates/juniqterm-app/src/: app.rs  main.rs
crates/juniqterm-gpu-draw/: Cargo.toml
crates/juniqterm-gpu-draw/examples/: integration_render_cmd.rs  integration_vt_parser.rs
crates/juniqterm-gpu-draw/src/: atlas.rs  renderer.rs
crates/juniqterm-gpu-draw/src/shaders/: glyph.wgsl
crates/juniqterm-grid/: Cargo.toml
crates/juniqterm-grid/src/: grid_tests.rs  lib.rs
crates/juniqterm-input/: Cargo.toml
crates/juniqterm-render-cmd/src/: lib.rs
crates/juniqterm-types/: Cargo.toml
growterm-app/: Cargo.toml
growterm-app/src/: app.rs  config.rs  copy_mode.rs  event_action.rs  ink_workaround.rs  lib.rs  main.rs  pomodoro.rs  response_timer.rs  selection.rs  tab.rs  url.rs  zoom.rs
growterm-gpu-draw/: Cargo.toml
growterm-gpu-draw/examples/: hardcoded_grid.rs  integration_render_cmd.rs  integration_vt_parser.rs
growterm-gpu-draw/src/: atlas.rs  lib.rs  renderer.rs
growterm-gpu-draw/src/shaders/: bg.wgsl  overlay.wgsl
growterm-grid/: Cargo.toml
growterm-grid/src/: grid_tests.rs  lib.rs
growterm-input/: Cargo.toml
growterm-input/src/: lib.rs
growterm-integration-tests/: Cargo.toml
growterm-integration-tests/examples/: print_grid.rs
growterm-integration-tests/fixtures/: README.md
growterm-integration-tests/src/: lib.rs
growterm-integration-tests/tests/: app_grid_dump.rs  app_launch.rs  baseline_position.rs  block_char_alpha.rs  block_char_coverage.rs  cell_size_check.rs  claude_code_app_launch.rs  claude_code_ime_trace.rs  cleanup_only_test_instances.rs  clipboard_copy_paste.rs  codex_resume_vt_replay.rs  default_palette_rendering.rs  diagonal_line_check.rs  file_drop_to_shell.rs  hangul_jamo_input.rs  pty_to_grid.rs  vt_to_grid.rs
growterm-macos/: Cargo.toml
growterm-macos/src/: delegate.rs  event.rs  key_convert.rs  lib.rs  view.rs  window.rs
growterm-macos/tests/: cmd_q_quit.rs  cmd_v_paste_event.rs
growterm-pty/: Cargo.toml
growterm-pty/src/: lib.rs
growterm-pty/tests/: integration.rs
growterm-render-cmd/: Cargo.toml
growterm-render-cmd/src/: lib.rs
growterm-types/: Cargo.toml
growterm-types/src/: lib.rs
growterm-vt-parser/: Cargo.toml
growterm-vt-parser/src/: lib.rs
juniqterm-app/: Cargo.toml
juniqterm-app/src/: app.rs  event_action.rs  jamo_compose.rs  key_convert.rs  lib.rs  main.rs  selection.rs
juniqterm-gpu-draw/: .gitattributes  Cargo.toml
juniqterm-gpu-draw/examples/: hardcoded_grid.rs  integration_render_cmd.rs  integration_vt_parser.rs
juniqterm-gpu-draw/src/: atlas.rs  lib.rs  renderer.rs
juniqterm-gpu-draw/src/shaders/: bg.wgsl
juniqterm-grid/src/: grid_tests.rs  lib.rs
juniqterm-input/src/: lib.rs
juniqterm-integration-tests/: Cargo.toml
juniqterm-integration-tests/examples/: print_grid.rs
juniqterm-integration-tests/src/: lib.rs
juniqterm-integration-tests/tests/: app_grid_dump.rs  app_launch.rs  baseline_position.rs  block_char_alpha.rs  block_char_coverage.rs  cell_size_check.rs  diagonal_line_check.rs  hangul_jamo_input.rs  pty_to_grid.rs  vt_to_grid.rs
juniqterm-macos/: Cargo.toml
juniqterm-macos/src/: delegate.rs  event.rs  key_convert.rs  lib.rs  view.rs  window.rs
juniqterm-macos/tests/: cmd_q_quit.rs  cmd_v_paste_event.rs
juniqterm-pty/: Cargo.toml
juniqterm-pty/src/: lib.rs
juniqterm-pty/tests/: integration.rs
juniqterm-render-cmd/: Cargo.toml
juniqterm-render-cmd/src/: lib.rs
juniqterm-types/src/: lib.rs
juniqterm-vt-parser/: Cargo.toml
juniqterm-vt-parser/src/: lib.rs
