[package]
name = "juniqterm-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
juniqterm-types = { path = "../juniqterm-types" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray", "NSRange", "NSAttributedString", "NSThread", "NSNotification"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSEvent",
    "NSTextInputClient",
    "NSScreen",
    "NSRunningApplication",
    "NSGraphics",
    "NSText",
] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer", "CALayer"] }
raw-window-handle = "0.6"
bitflags = "2"
