[package]
name = "juniqterm-gpu-draw"
version = "0.1.0"
edition = "2021"

[dependencies]
juniqterm-types = { path = "../juniqterm-types" }
wgpu = "24"
winit = "0.30"
fontdue = "0.9"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[[example]]
name = "hardcoded_grid"

[[example]]
name = "integration_render_cmd"

[dev-dependencies]
juniqterm-render-cmd = { path = "../juniqterm-render-cmd" }
